--- a/mapgoogle.html
+++ b/mapgoogle.html
@@ -8,15 +8,15 @@
   </head>
   <style>
       #map{
-          height: 100px;
-          width: 100px;
+          height: 500px;
+          width: 500px;
       }
   </style>
   <body >
-     <div id="map" onload="initMap()"></div>
+     <div id="map" ></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly" async>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqZeSoJNK-R0KCVbiMBgpnMzt2InUwV50&callback=initMap" >
     </script>
   </body>
 </html>
