--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href=$>Home</a></li>
             <li><a href="https://wii.gov.in/nwdc_biosphere_reserves" target="_blank">Further Reading</a></li>
             <li><a href="#items">Case Studies</a></li>
-            <li>Contact us 📞</li>
+            <li><a href="#chatbot">Contact us 📞</a></li>
         </ul>
         </div>
     </header>
@@ -39,7 +39,11 @@
       });
     }
   </script> -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqZeSoJNK-R0KCVbiMBgpnMzt2InUwV50&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqZeSoJNK-R0KCVbiMBgpnMzt2InUwV50&callback=initMap"></script>
+  <br>
+  <div id="chatbot">
+  <iframe src="https://webchat.botframework.com/embed/chatbotbio-bot?s=hh2pq1fi4TY.Jso7aMOFw6M5rw-stf62lo-nG6CzrwHoaLBlmCFCBK0" style="height: 100%; max-height: 100%; width: 100%;"></iframe>
+  </div>
     <div id="items">
     <ul style="list-style-type: none;">
     <li><a href="https://vikaspedia.in/energy/environment/biodiversity-1/the-nilgiri-biosphere-reserve" target="_blank">Nilgiri Biosphere Reserve</a></li>
@@ -59,5 +63,5 @@
     <li><a href="https://www.gktoday.in/topic/panna-biosphere-reserve/" target="_blank">Panna</a></li>
     </ul>
     </div>
-</body>
+  </body>
 </html>
