--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/nature.css">
+    <link rel="stylesheet" type="text/css" href="nature.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <meta charset="UTF-8">
