--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/nature.css">
+    <link rel="stylesheet" type="text/css" href="nature.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <meta charset="UTF-8">
@@ -42,6 +42,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqZeSoJNK-R0KCVbiMBgpnMzt2InUwV50&callback=initMap"></script>
   <br>
   <div id="chatbot">
+    <!-- QnA Maker --> -->
   <iframe src="https://webchat.botframework.com/embed/chatbotbio-bot?s=hh2pq1fi4TY.Jso7aMOFw6M5rw-stf62lo-nG6CzrwHoaLBlmCFCBK0" style="height: 100%; max-height: 100%; width: 100%;"></iframe>
   </div>
     <div id="items">
