Modified the project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="nature.css">
+    <link rel="stylesheet" type="text/css" href="css/nature.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biosphere Reserves In India</title>
+    <link rel="icon" href="css/tile.jpg" type="image/icon type">
+
     <script src="mapg.js"></script>
 </head>
 <body>
